# bic

./: .gitignore  .travis.yml  Dockerfile  Makefile.am  README.md  README.org  TAGS  configure.ac
.circleci/: config.yml
.github/workflows/: nightly-Homebrew-build.yml
doc/example-scripts/: fputs.example
etc/: Makefile.am  bic_valgrind.sh  default.supp
src/: Makefile.am  c.lang  cfilelex.l  cfileparser.y  cscript.c  cscript.h  ctypes.def  evaluate.c  evaluate.h  ffi-types.h  function-call.c  function-call.h  gc-internal.h  gc.c  gc.h  genaccess.cpp  genctypes.cpp  gendot.cpp  gendump.cpp  genffitypes.cpp  gengc.cpp  genspecresolver.cpp  gentree.cpp  gentypes.cpp  hash_table.c  hash_table.h  identifier.c  identifier.h  inspect.c  inspect.h  lang.cpp  lang.h  lang_lexer.lpp  lex.l  lex.m4  list.c  list.h  main.c  parser-lex-funcs.m4  parser.m4  (+21 more)
src/aarch64/: Makefile.am  do_call.S  function_call.c  function_call.h  ptr_call.c  ptr_call.h  ptr_call_entry.S
src/armv7l/: Makefile.am  do_call.S  function_call.c  function_call.h  ptr_call.h
src/i686/: .gitignore  Makefile.am  do_call.S  function_call.c  function_call.h  ptr_call.h  ptr_call_entry.S
src/x86_64/: .gitignore  Makefile.am  do_call.S  function_call.c  function_call.h  ptr_call.c  ptr_call_entry.S
testsuite/: .gitignore  Makefile.am  add.c  array_ptr.c  array_torture.c  basic_enum.c  break.c  casts.c  char-decl-and-assignment.c  chars.exp  comma.c  decl.exp  decl_with_assign.c  default-arg-promotions.c  div.c  double_extern_fn_decl.c  double_pointer.c  encrypt-decrypt.c  eqneq.c  expectHarness.sh  factorial.c  fibonacci.c  fileio.exp  fn_param_name_val_name_same.c  for-loop-init-decl.c  forward_declare.c  function_pointer.c  function_ptr_typedef.c  gethostname.c  gt.c  gteq.c  iand.c  if_stmts.c  infix.exp  ior.c  linked-list.c  logical_op_test.c  loops.c  lt.c  lteq.c  (+39 more)
testsuite/bic.parser.test/: identifier.exp  integer.exp  postfix_expression.exp  unary_expression.exp
testsuite/config/: unix.exp
testsuite/lib/: tree-util.exp  util.exp
