check_PROGRAMS = puts strcat pass_parameter_printf decl_with_assign	\
                 fn_param_name_val_name_same postfix_increment		\
                 prefix_increment postfix_decrement prefix_decrement	\
                 simple_typedef simple_struct struct_typedef

TESTS = $(check_PROGRAMS)

TEST_RUNNER = $(srcdir)/test.sh
LOG_COMPILER = $(TEST_RUNNER)
EXTRA_DIST = $(TEST_RUNNER)
